--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+3
+version: 1.0.2+7
 
 environment:
   sdk: ^3.9.2
@@ -49,6 +49,13 @@ dependencies:
   
   # 日付フォーマット
   intl: ^0.19.0
+  
+  # Google Fonts
+  google_fonts: ^6.1.0
+  
+  # ローカル通知
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
